# imgviz

./: .flake8  .gitignore  .readthedocs.yml  .travis.sh  .travis.yml  .travis_push.sh  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  _typos.toml  generate_readme.py  getting_started.py  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  spam.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  lint.yml  publish.yml  release.yml
checks/_io_checks/_pyglet_checks/: check_pyglet_imshow.py  check_pyglet_threaded_image_viewer.py
docs/: Makefile  requirements.txt  rtd_conda.yml
docs/adr/: 0001-visualization-construction-layers.md  0002-scope-and-design-principles.md
docs/source/: conf.py  getting_started.rst  index.rst  installation.rst
docs/source/_static/: getting_started.py
docs/source/reference/: index.rst
examples/: README.md  base.py  blur_pixelate.py  box_corners.py  centerize.py  color.py  colorblind.py  colorize.py  depth2rgb.py  diff.py  draw.py  flags2rgb.py  flow.py  flow2rgb.py  heatmap.py  instances2rgb.py  io.py  label2rgb.py  letterbox.py  mask2rgb.py  nchannel2rgb.py  pie.py  plot_trajectory.py  progress_bar.py  rectangle.py  resize.py  rotated_rectangle.py  rounded_rectangle.py  scalebar.py  tile.py  tint.py  trajectory.py
examples/io_examples/: pyglet_imshow.py  pyglet_threaded_image_viewer.py
imgviz/: __init__.py  _blur.py  _centerize.py  _color.py  _colorblind.py  _colorize.py  _depth.py  _diff.py  _dtype.py  _flags.py  _flow.py  _heatmap.py  _instances.py  _io.py  _label.py  _letterbox.py  _masks.py  _nchannel.py  _normalize.py  _pad.py  _pixelate.py  _resize.py  _scalebar.py  _tile.py  _tint.py  _trajectory.py  _utils.py  _version.py  centerize.py  color.py  colorize.py  depth.py  draw.py  dtype.py  fill.py  flow.py  instances.py  io.py  label.py  nchannel.py  (+6 more)
imgviz/_io/: __init__.py  _pyglet.py  base.py  opencv.py  pil.py  pyplot.py
imgviz/_io/_pyglet/: __init__.py  base.py  pyglet_imshow.py  pyglet_run.py  pyglet_threaded_image_viewer.py
imgviz/components/: __init__.py  _legend.py
imgviz/data/: __init__.py  _utils.py
imgviz/data/arc2017/: __init__.py  camera_info.json  camera_info.yaml  class_names.txt  data.npz  res4.npz
imgviz/data/kitti/: __init__.py
imgviz/data/lena/: __init__.py
imgviz/data/middlebury/: __init__.py
imgviz/data/voc/: __init__.py  data.npz
imgviz/draw/: __init__.py  _arrow.py  _box_corners.py  _circle.py  _color.py  _ellipse.py  _ink.py  _line.py  _pie.py  _polygon.py  _progress_bar.py  _rectangle.py  _rotated_rectangle.py  _rounded_rectangle.py  _star.py  _text.py  _text_in_rectangle.py  _triangle.py  circle.py  ellipse.py  line.py  rectangle.py  star.py  text.py  text_in_rectangle.py  triangle.py
tests/: _centerize_test.py  _color_test.py  _dtype_test.py  _flow_test.py  _instances_test.py  _label_test.py  _masks_test.py  _tile_test.py  conftest.py  io_test.py  test__centerize.py  test__color.py  test__masks.py  test__resize.py  test__trajectory.py  test_depth.py  test_flow.py  test_instances.py  test_label.py  test_trajectory.py
tests/color_tests/: test_asgray.py  test_asrgb.py  test_asrgba.py  test_label2rgb.py
tests/data_tests/: test_arc2017.py
tests/draw/: _ellipse_test.py  _text_test.py
tests/draw_tests/: _ellipse_test.py  _line_test.py  test__circle.py  test__star.py  test__text_in_rectangle.py  test__triangle.py  test_rectangle.py  test_text.py
tests/io_tests/: test_pyplot.py
tests/unit/: _blur_test.py  _centerize_test.py  _color_test.py  _colorblind_test.py  _colorize_test.py  _depth_test.py  _diff_test.py  _dtype_test.py  _flags_test.py  _flow_test.py  _heatmap_test.py  _instances_test.py  _label_test.py  _letterbox_test.py  _masks_test.py  _nchannel_test.py  _normalize_test.py  _pad_test.py  _pixelate_test.py  _resize_test.py  _scalebar_test.py  _tile_test.py  _tint_test.py  _utils_test.py  fill_test.py  io_test.py
tests/unit/components/: _legend_test.py
tests/unit/data/: arc2017_test.py  data_utils_test.py  kitti_test.py  lena_test.py  middlebury_test.py
tests/unit/draw/: _arrow_test.py  _box_corners_test.py  _circle_test.py  _ellipse_test.py  _ink_test.py  _line_test.py  _pie_test.py  _polygon_test.py  _star_test.py  (+7 more)
(+6 files in other folders)
