[build-system]
requires = ["hatchling>=1.20.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/wkentaro/imgviz"

[project]
name = "imgviz"
description = "Image Visualization Tools"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Kentaro Wada", email = "www.kentaro.wada@gmail.com" },
]
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "matplotlib",
  "numpy",
  "Pillow>=5.3.0",
  "PyYAML",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
all = [
  "scikit-image",
  "scikit-learn",
  "opencv-python",
  "pyglet",
]
test = [
  "build",
  "mypy",
  "types-Pillow",
  "types-PyYAML",
  "pytest",
  "pytest-xdist",
  "ruff",
  "twine",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
  ".conda",
  ".git",
  "src",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), isort (`I`).
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
