[build-system]
requires = ["hatchling>=1.20.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/wkentaro/imgviz"

[project]
name = "imgviz"
description = "Image Visualization Tools"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Kentaro Wada", email = "www.kentaro.wada@gmail.com" },
]
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cmap>=0.1.0",
  "numpy>=1.21.0",
  "Pillow>=5.3.0",
]
dynamic = ["readme", "version"]

[dependency-groups]
dev = [
  "build>=1.3.0",
  "ipython>=8.37.0",
  "matplotlib>=3.5.0",
  "pytest>=8.4.2",
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.10",
  "twine>=6.2.0",
  "ty>=0.0.7",
  "types-pillow>=10.2.0.20240822",
]

[project.optional-dependencies]
all = [
  "matplotlib",
  "opencv-python",
  "pyglet",
  "scikit-image",
  "scikit-learn",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
